added initialization and update of NodeHistoryManager